--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,18 +1,24 @@
 .collection-item {
     width: 22%;
     height:450px;
-    margin-bottom: 20px;
+    margin-bottom:100px;
     & img {
         width: 100%;
-        height: 95%;
+        height: 90%;
         object-fit: cover;
+    }
+
+    & button {
+        margin-top: -5px;
+        width: 100%;
+        opacity: 0.95;
     }
 
     &-text {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 10%;
+        height: 15%;
         & h1 {
             font-size: 20px;
         }
